--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="/assets/styles/main.css">
  
     
 </head>
 
 <body>
     <ul>
-        <li><a href="chapter/design-principles.html">Design Principles</a></li>
+        <li><a href="/chapter/design-principles.html">Design Principles</a></li>
     </ul>
 </body>
 
